--- a/微信小程序/project.config.json
+++ b/微信小程序/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.91",
 	"appid": "wxcaf0feebefbee8c8",
-	"projectname": "%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F01",
+	"projectname": "weixin",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
